# PharmaSignal

./: .gitignore  Makefile  README.md  pyproject.toml  request.py  requirements-api.txt  requirements-dev.txt  requirements.txt
.github/workflows/: pipeline.yml  quarterly-ingest.yml
config/: drugs_of_interest.yml  faers_quarters.yml  nhanes_variables.yml  pubmed_queries.yml  signal_thresholds.yml
dashboard/: app.py  lib.py
dashboard/pages/: 10_Drug_Interactions.py  1_Signal_Explorer.py  2_Drug_Profile.py  3_Event_Profile.py  4_Emerging_Signals.py  5_Literature_Evidence.py  6_NHANES_Context.py  7_Pipeline_Health.py  8_Methodology.py  9_Subgroup_Signals.py
docs/: FULL_FAERS_UPGRADE_PLAN.md  PROJECT_STATUS.md  architecture.md  aws_deployment.md  backfill_orchestration.md  cost_estimate.md  data_dictionary.md  deployment.md  future_enhancements.md  limitations.md  methodology.md  roadmap.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/lib/: api.ts  (+4 more)
infrastructure/: API_DEPLOY.md  CLOUD_SETUP.md  api_deploy.py  aws_deploy.py  iam_backfill_policy.json  spark_backfill.py
notebooks/: 01_faers_eda.ipynb  02_signal_detection_validation.ipynb  03_nhanes_population_context.ipynb  04_pubmed_evidence.ipynb
sample_data/: README.md
spark/: build_deps.sh
tests/: test_api.py  test_build_gold_bulk.py  test_drug_dimension.py  test_drug_label.py  test_drug_normalization.py  test_ebgm.py  test_openfda_clauses.py  test_quality_and_demo.py  test_rxnorm.py  test_signal_scores.py  test_spark_backfill.py  test_vectorized_scores.py
(+53 files in other folders)
