[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pharmasignal"
version = "0.1.0"
description = "Cloud-native pharmacovigilance signal-detection platform (FAERS/openFDA, NHANES, PubMed)."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
